add basic audit logging

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ ACCESS_TOKEN=your-secure-access-token-here
 # Server Configuration
 PORT=8080
 
-# Stack Configuration  
+# Stack Configuration
 # Directory to scan for Docker Compose stacks
 STACK_LOCATION=/opt/compose
+
+# Audit Logging Configuration
+AUDIT_LOG_ENABLED=false
+AUDIT_LOG_FILE_PATH=/var/log/berth-agent/audit.jsonl
