--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Determine tag
+        id: get_tag
+        run: |
+          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
+            TAG=${GITHUB_REF#refs/tags/}
+            echo "TAG=$TAG" >> $GITHUB_ENV
+            echo "IS_TAG=true" >> $GITHUB_ENV
+
+            # Extract semver components (e.g., v0.1.1 -> 0, 0.1, 0.1.1)
+            if [[ "$TAG" =~ ^v([0-9]+)\.([0-9]+)\.([0-9]+) ]]; then
+              MAJOR="${BASH_REMATCH[1]}"
+              MINOR="${BASH_REMATCH[2]}"
+              PATCH="${BASH_REMATCH[3]}"
+              echo "SEMVER_MAJOR=$MAJOR" >> $GITHUB_ENV
+              echo "SEMVER_MINOR=$MINOR" >> $GITHUB_ENV
+              echo "SEMVER_PATCH=$PATCH" >> $GITHUB_ENV
+            fi
+          else
+            echo "IS_TAG=false" >> $GITHUB_ENV
+          fi
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -49,12 +70,48 @@ jobs:
             type=semver,pattern={{major}}
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image
+      - name: Debug metadata outputs
+        run: |
+          echo "Tags: ${{ steps.meta.outputs.tags }}"
+          echo "Labels: ${{ steps.meta.outputs.labels }}"
+          echo "Version: ${{ steps.meta.outputs.version }}"
+
+      - name: Build and push Docker image (with tag)
+        if: env.IS_TAG == 'true'
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ env.SEMVER_MAJOR }}.${{ env.SEMVER_MINOR }}.${{ env.SEMVER_PATCH }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ env.SEMVER_MAJOR }}.${{ env.SEMVER_MINOR }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ env.SEMVER_MAJOR }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build and push Docker image (without tag)
+        if: env.IS_TAG != 'true' && github.event_name != 'pull_request'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build Docker image (PR)
+        if: github.event_name == 'pull_request'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
