--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ STACK_LOCATION=/opt/compose
 # Audit Logging Configuration
 AUDIT_LOG_ENABLED=false
 AUDIT_LOG_FILE_PATH=/var/log/berth-agent/audit.jsonl
+AUDIT_LOG_SIZE_LIMIT_MB=100
 
 # Vulnerability Scanning Configuration
 VULNSCAN_PERSISTENCE_DIR=/var/lib/berth-agent/scans
