feat: Add security audit logging & rename old audit logging -> api logging

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,11 @@ PORT=8080
 # Directory to scan for Docker Compose stacks
 STACK_LOCATION=/opt/compose
 
+# API Request Logging Configuration
+API_LOG_ENABLED=false
+API_LOG_FILE_PATH=/var/log/berth-agent/api.jsonl
+API_LOG_SIZE_LIMIT_MB=100
+
 # Audit Logging Configuration
 AUDIT_LOG_ENABLED=false
 AUDIT_LOG_FILE_PATH=/var/log/berth-agent/audit.jsonl
